# betby_test_777

./: .gitignore  README.md  compose.yaml
backend/: .env  Dockerfile  pyproject.toml
backend/app/: config.py  crud.py  main.py  models.py  router.py  run.py
backend/app/data/: events.csv
backend/tests/: test_events.py
frontend/: .env  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: TableModel.vue
frontend/src/layouts/: Events.vue  Layout.vue
frontend/src/plugins/: http.ts
frontend/src/utils/: formatTable.ts  utils.ts
